--- a/my-app/index.html
+++ b/my-app/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sass First</title>
+    <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 <body>
+    <h1>Sass FIrts</h1>
+    <div>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam corporis fuga consectetur impedit aspernatur, cumque commodi asperiores. Nesciunt, iusto eaque?</p>
+        <button>Press Me</button>
+    </div>
+    <div>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam corporis fuga consectetur impedit aspernatur, cumque commodi asperiores. Nesciunt, iusto eaque?</p>
+        <button>Press Me</button>
+    </div>
     <script src="./dist/app.js"></script>
 </body>
 </html>
